--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,2 +1,15 @@
 Controle de l'xistance d'une entreprise :
 https://avis-situation-sirene.insee.fr/
+{% extends 'base.html.twig' %}
+
+{% block title %}Hello DriverController!{% endblock %}
+
+{% block body %}
+
+<!-- Admin Controller banner -->
+{{ include('admin/banner.html.twig') }}
+
+
+
+
+{% endblock %}
