--- a/templates/mailer/index.html.twig
+++ b/templates/mailer/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bonjour MailerController!{% endblock %}
+{% block title %}Bienvenue, nouvel inscrit{% endblock %}
 
 {% block body %}
 <!-- <style>
