--- a/templates/profile/driver.html.twig
+++ b/templates/profile/driver.html.twig
@@ -12,36 +12,39 @@
     <!-- CA MARCHE !!!... -->
     {#
         #}
-        {{ dump('app.user (Current = 30 ?) :') }}
-        {{ dump(app.user) }}
+        {{ dump('app.user.picture[0] :') }}
+        {{ dump(app.user.picture[0]) }}
 
     <!-- CA MARCHE !!!... -->
     {#
-        #}
         {{ dump('app.user.picture (Current = 6 ?) :') }}
         {{ dump(app.user.picture) }}
         {{ dump('app.user.picture.pathname : '~app.user.picture.pathname) }}
         {{ dump('app.user.picture.picturelabel.label : '~app.user.picture.picturelabel.label) }}
+        #}
 
     
     <!-- NE FONCTIONNE PLUS SANS LIAISON-->
     {#
-        {{ dump('app.user.driver (User(30) => Driver(1) ?) :') }}
-        {{ dump(app.user.driver) }}
         #}
+        {{ dump('app.user.driver (User('~app.user.id~') => Driver('~app.user.driver.id~') ?) :') }}
+        {{ dump(app.user.driver) }}
     <!-- LES 2, CA MARCHE SI PAS DE LIAISON !!! -->
     {#
         #}
-        {{ dump('Driver (TWIG ! getdriverbyid(1)) :') }}
-        {{ dump(getdriverbyid(1)) }}
+        {{ dump('Driver (TWIG ! getdriverbyid('~app.user.driver.id~')) :') }}
+        {{ dump(getdriverbyid(app.user.driver.id)) }}
         {{ dump('Driver (variable driver) :') }}
         {{ dump(driver) }}
 
     <!-- LES 2, CA MARCHE SI PAS DE LIAISON !!! -->
     {#
         #}
-        {{ dump('Company(TWIG ! getcompanybyid(1)) :') }}
-        {{ dump(getcompanybyid(1)) }}
+        {{ dump('app.user.driver.company (User('~app.user.id~') => Driver('~app.user.driver.id~') => Company('~app.user.driver.company.id~') ?) :') }}
+        {{ dump(app.user.driver.company) }}
+
+        {{ dump('Company(TWIG ! getcompanybyid('~app.user.driver.company.id~')) :') }}
+        {{ dump(getcompanybyid(3)) }}
         {{ dump('Company(variable company) :') }}
         {{ dump(company) }}
 
