--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,4 +1,4 @@
-<h1>Bonjour. Merci de confirmer votre adresse électronique.</h1>
+<h1>Bonjour à vous. Merci de confirmer votre adresse électronique.</h1>
 
 <p>
     Pour confirmer votre inscription à notre annuaire, cliquez sur le lien ci-dessous svp.<br>
